<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F77F00"
    tools:context=".DrawActivity">

    <TextView
        android:id="@+id/ChangeRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/round"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/counter"
        app:layout_constraintEnd_toStartOf="@+id/counter"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/countPlayers"
        android:layout_width="33dp"
        android:layout_height="23dp"
        android:fontFamily="casual"
        android:text="@string/_0_0"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/counter" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/_0_0_count"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/newWord"
        android:layout_width="136dp"
        android:layout_height="49dp"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:background="#003049"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/word"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.drawgame.PlayView
        android:id="@+id/playView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/newWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter" />

</androidx.constraintlayout.widget.ConstraintLayout>